--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multiplication Mayhem</title>
     <link href = "./css/style.css" type="text/css" rel="stylesheet">
     <script src="./js/app.js"></script>
 </head>
 <body>
+    <h1>Multiplication Mayhem</h1>
+    <div id="your-element-id" class="background-image"></div>
+    <div id="set" class="set"></div>
     
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    
-<body>
-    <div class="set"></div>
 </body>
 </html>
