--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <script src="./js/app.js"></script>
 </head>
 <body>
-    <h1>Multiplication Mayhem</h1>
-    <div id="your-element-id" class="background-image"></div>
-    <div id="set" class="set"></div>
+    h1>Multiplication Mayhem</h1>
+    <div class="image-container">
+        <img src="assets/Background.jpg" alt="image">
     
+           
+        </div>
 </body>
 </html>
+
+
+
