--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplication Mayhem</title>
-    <link href = "./css/style.css" type="text/css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css2?family=Bangers&display=swap' rel='stylesheet'>
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
     <script src="./js/app.js"></script>
 </head>
 <body>
-    h1>Multiplication Mayhem</h1>
+    <h1>Multiplication Mayhem</h1>
     <div class="image-container">
-        <img src="assets/Background.jpg" alt="image">
-    
-           
-        </div>
+        <img src="./assets/Background.jpg" alt="image"> 
+    </div>
 </body>
 </html>
-
-
-
