drop-down menu function

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,5 +15,18 @@
     <div class="image-container">
         <img src="./assets/Background.jpg" alt="image"> 
     </div>
+    <button id="instructions-button" onclick="showInstructions()">Instructions</button>
+    <button id="start-button">Start</button>
+    
+    <div id="instructions" style="display:none;">
+        <h2>Instructions</h2>
+        <ul>
+            <li>Blah</li>
+            <li>Blah Blah</li>
+            <li>Blah Blah Blah</li>
+            <li>Blah Blah Blah Blah</li>
+        </ul>
+    </div>
+    
 </body>
 </html>
