--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     <div class="image-container">
         <img src="./assets/Background.jpg" alt="image"> 
     </div>
-
+    <form>
+        <p>What is the result of:</p>
+        <p id="question"></p>
+        <input type="text" id="answer">
+        <button id="submit-button">Submit</button>
+        <p id="result"></p>
+    </form>
     <button class="buttons-one" id="start-button">Start</button>
     <button class="buttons-one" id="instructions-button">Instructions</button>
-    
     <div id="instructions" style="display:none;">
         <h2>Instructions</h2>
         <ul>
@@ -29,15 +34,9 @@
     <div id="hero-bar" class="hidden">
         <div id="hero-level"></div>
     </div>
-
     <div id="villain-bar" class="hidden">
         <div id="villain-level"></div>
     </div>
+    
 </body>
 </html>
-
-
-
-
-
-   
