--- a/index.html
+++ b/index.html
@@ -5,33 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multiplication Mayhem</title>
-    <link href="css/style.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
+    <script src="./js/app.js"></script>
 </head>
 <body>
     <h1>Multiplication Mayhem</h1>
     <button class="buttons-one" id="start-button">Start</button>
-    <button class="buttons-one" id="instructions-button">Instructions</button>
+    <!-- <button class="buttons-one" id="instructions-button">Instructions</button> -->
     <div class="image-container">
-        <img src="assets/take-2-background.jpg" alt="image"> 
+        <img src="assets/Background.jpg" alt="image"> 
     </div>
     <form>
         
-        <p id="question"></p>
-        <input type="text" id="answer">
-        <button id="submit-button">Submit</button>
-        <p id="result"></p>
+        <p id="question" class="hidden"></p>
+        <input type="text" id="answer" class="hidden">
+        <button id="submit-button" class="hidden">Submit</button>
+        <p id="result" class="hidden"> </p>
     </form>
    
-    <div id="instructions">
-        <p>Blah<br>Blah Blah<br>Blah Blah Blah<br></p>
-    </div>
+    <div id="instructions" class="hidden">
+        <ul>
+          <li>Type the answer to the math problem into the box.</li>
+          <li>When you are done, click submit.</li>
+          <li>If your answer is right, The Calculator's red bar will go down.</li>
+          <li>If you are wrong or if you run out of time, Multiplication Mastermind's blue bar will go down.</li>
+        </ul>
+      </div>
     <div id="hero-bar" class="hidden">
         <div id="hero-level"></div>
     </div>
     <div id="villain-bar" class="hidden">
         <div id="villain-level"></div>
     </div>
-    <script src="./js/app.js"></script>
+    
 </body>
 </html>
 
