--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="villain-bar" class="hidden">
         <div id="villain-level"></div>
     </div>
-    
+    <div id="timer">15</div>
 </body>
 </html>
 
