--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <button class="buttons-one" id="start-button">Start</button>
     <!-- <button class="buttons-one" id="instructions-button">Instructions</button> -->
     <div class="image-container">
-        <img src="assets/Background.jpg" alt="image"> 
+        <img src="assets/Background.jpg" alt="image">
     </div>
+    <div id="hero" class="hidden">
+        <img src="assets/hero.png">
+    </div>
+    <div id="villain" class="hidden">
+        <img src="assets/villain.png">
+    </div>
+
+    
     <form>
         
         <p id="question" class="hidden"></p>
