--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="image-container">
         <img src="assets/Background.jpg" alt="image">
     </div>
-    <div id="hero" class="hidden">
+    <!-- <div id="hero" class="hidden">
         <img src="assets/hero.png">
     </div>
     <div id="villain" class="hidden">
         <img src="assets/villain.png">
-    </div>
+    </div> -->
 
     
     <form>
@@ -48,4 +48,3 @@
     <div id="timer">15</div>
 </body>
 </html>
-
