--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<!-- <head>add font  -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +10,32 @@
 </head>
 <body>
     <h1>Multiplication Mayhem</h1>
-    <button class="buttons-one" id="start-button">Start</button>
+ <div class="container">
+  <button class="buttons-one" id="start-button">Start</button>
+</div>
     <!-- <button class="buttons-one" id="instructions-button">Instructions</button> -->
-    <div class="image-container">
-        <img src="assets/Background.jpg" alt="image">
-    </div>
-    <!-- <div id="hero" class="hidden">
+    <!-- <div class="image-container"> -->
+        <!-- <img src="assets/Background.jpg" alt="image"> -->
+    <!-- </div>
+    <div id="hero">
+        don't forget to add hidden class
         <img src="assets/hero.png">
     </div>
-    <div id="villain" class="hidden">
-        <img src="assets/villain.png">
-    </div> -->
+    <div id="villain" >
+    don't forget to add hidden class after style -->
+        <!-- <img src="assets/villain.png"> -->
+  
 
-    
+        <div class="image-container">
+            <img id="villain-image" src="assets/villain.png">
+            <img id="hero-image" src="assets/hero.png">
+        </div>
+   
+    <img id="background-image" src="assets/Background.jpg" class="hidden">
+
+    <h2>The Calculator VS Multiplication Mastermind </h2> 
+
+    <h3> Help Multiplication Mastermind<br> <em>destroy</em> <br> the Calculator </h3>
     <form>
         
         <p id="question" class="hidden"></p>
