--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     <div id="villain-bar" class="hidden">
         <div id="villain-level"></div>
     </div>
-    <div id="timer">15</div>
+    <div id="timer" class="hidden">15</div>
 </body>
 </html>
