--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
     don't forget to add hidden class after style -->
         <!-- <img src="assets/villain.png"> -->
   
-
+       
         <div class="image-container">
             <img id="villain-image" src="assets/villain.png">
             <img id="hero-image" src="assets/hero.png">
         </div>
    
     <img id="background-image" src="assets/Background.jpg" class="hidden">
+    
 
     <h2>The Calculator VS Multiplication Mastermind </h2> 
 
@@ -58,6 +59,7 @@
     <div id="villain-bar" class="hidden">
         <div id="villain-level"></div>
     </div>
-    <div id="timer" class="hidden">15</div>
+
+    <div id="timer">15</div>
 </body>
 </html>
