--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Multiplication Mayhem</title>
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <script src="./js/app.js"></script>
+   
 </head>
 <body>
     <h1>Multiplication Mayhem</h1>
@@ -26,6 +27,7 @@
    
     <img id="background-image" src="assets/Background.jpg" class="hidden">
     
+    <img id="final-image" src="assets/final.png"></img>
 
     <h2>The Calculator VS Multiplication Mastermind </h2> 
 
@@ -54,6 +56,6 @@
         <div id="villain-level"></div>
     </div>
 
-   
+    
 </body>
 </html>
