--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    
     <img id="background-image" src="assets/Background.jpg" class="hidden">
     
-    <img id="final-image" src="assets/final.png"></img>
+    <img id="final-image" src="assets/final.png" style="display:none"></img>
 
     <h2>The Calculator VS Multiplication Mastermind </h2> 
 
