--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h2>The Calculator VS Multiplication Mastermind </h2> 
 
        
-    <h3> Help Multiplication Mastermind<br> <em>destroy</em> <br> the Calculator </h3>
+    <h3> Help Multiplication Mastermind <br> <em>destroy</em> <br> The Calculator </h3>
     <form>
         
         <p id="question" class="hidden"></p>
@@ -40,9 +40,10 @@
         <button id="submit-button" class="hidden">Submit</button>
         <p id="result" class="hidden"> </p>
     </form>
-   
+ 
     <div id="instructions" class="hidden">
         <ul>
+          <li>How to Play</li>
           <li>Type the answer to the math problem into the box.</li>
           <li>When you are done, click submit.</li>
           <li>If your answer is right, The Calculator's red bar will go down.</li>
