--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
     <div id="instructions" class="hidden">
         <ul>
-          <li>How to Play</li>
+          <li>**How to Play**</li>
           <li>Type the answer to the math problem into the box.</li>
           <li>When you are done, click submit.</li>
           <li>If your answer is right, The Calculator's red bar will go down.</li>
