--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Multiplication Mayhem</title>
     <link href="./css/style.css" type="text/css" rel="stylesheet">
     <script src="./js/app.js"></script>
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Multiplication Mayhem</h1>
